package com.strategy.factory;

/**
 * @author liucui
 */
public interface Strategy {
    /**
     * execute function of basic strategy
     */
    void execute();
}